--- a/src/css/invisibles.scss
+++ b/src/css/invisibles.scss
@@ -1,10 +1,15 @@
 .invisible {
+  pointer-events: none;
+  user-select: none;
+}
+
+.invisible:before {
+  caret-color: inherit;
   color: gray;
   display: inline-block;
   font-weight: 400;
   font-style: normal;
-  pointer-events: none;
-  user-select: none;
+  line-height: 1em;
   width: 0;
 }
 
