Fix positioning of nb-space in Firefox

--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -31,9 +31,12 @@
   content: "¶";
 }
 
+.invisible--nb-space {
+  vertical-align: text-bottom;
+}
+
 .invisible--nb-space:before {
   font-size: 15px;
-  vertical-align: bottom;
   content: "^";
   position: absolute;
   top: -6px;
