--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -5,14 +5,14 @@
    * with carets and inline elements when contenteditable
    * is 'false'. See e.g. https://github.com/ProseMirror/prosemirror/issues/1061
    */
-  display: inline-block;
+  display: inline;
   position: relative;
 }
 
 .invisible:before {
   caret-color: inherit;
   color: gray;
-  display: inline-block;
+  display: inline;
   font-weight: 400;
   font-style: normal;
   line-height: 1em;
