--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -5,16 +5,32 @@
    */
   display: inline;
   position: relative;
+  line-height: inherit;
 }
 
 .invisible:before {
+  position: relative;
   caret-color: inherit;
   color: gray;
   display: inline-block;
   font-weight: 400;
   font-style: normal;
-  line-height: 1em;
   width: 0;
+  z-index: 1;
+}
+
+.invisible__selected-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.invisible__selected-marker {
+  position: relative;
+  /* background-color: rgb(207, 225, 237); */
+  content: " ";
+
+  z-index: 0;
 }
 
 .invisible--space:before {
