--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -8,15 +8,36 @@
 }
 
 .invisible:before {
-  position: absolute;
+  position: relative;
   caret-color: inherit;
   color: gray;
-  display: inline;
+  display: inline-block;
+  font-weight: 400;
+  font-style: normal;
+  line-height: initial;
+  width: 0;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.invisible__selected-marker {
+  position: absolute;
+  caret-color: inherit;
+  background-color: #dcdcdc;
+  display: inline-block;
   font-weight: 400;
   font-style: normal;
   line-height: initial;
   top: 0;
   left: 0;
+  width: 10px;
+  height: 100%;
+  z-index: 0;
+}
+
+.ProseMirror-focused .invisible__selected-marker {
+  background-color: #b4d9ff;
 }
 
 .ProseMirror-focused .invisible--is-selected::before {
