adds pilcrow to heading

--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -61,6 +61,10 @@
   content: "¶";
 }
 
+.invisible--heading:before {
+  content: "¶";
+}
+
 .invisible--nb-space {
   vertical-align: text-bottom;
 }
