Add soft hyphen

--- a/src/css/invisibles.css
+++ b/src/css/invisibles.css
@@ -49,6 +49,10 @@
   background-color: #dcdcdc;
 }
 
+.invisible--soft-hyphen:before {
+  content: "-";
+}
+
 .invisible--space:before {
   content: "·";
 }
